# garage

./: .gitignore  .gitmodules  README.md  docker-compose.yml
docker_scripts/: build_image_all.sh  build_image_back_end.sh  build_image_front_end.sh  build_image_projects.sh  containers_start.sh  enter_back_end_container.sh  enter_front_end_container.sh  enter_projects_container.sh
garage_back_end/: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  requirements.txt
garage_back_end/back_end_app/: apps.py  models.py  serializers.py  urls.py  views.py
garage_back_end/back_end_app/migrations/: 0001_initial.py  0002_rename_steps_simulation_message.py  0003_rename_message_simulation_simulation_steps.py
garage_back_end/back_end_app/simulator_wrapper/: simulator_wrapper.py
garage_back_end/back_end_server/: asgi.py  settings.py  urls.py  wsgi.py
garage_back_end/installation_scripts/: build_back_end.sh  run_back_end.sh
garage_back_end/projects/: __init__.py
garage_back_end/projects/algorithms/: CMakeLists.txt
garage_back_end/projects/algorithms/include/: common_headers.h  data_structures.h  is_unique.h  p2c1_remove_dups.h  p2c2_k_to_last.h  p2c3_delete_middle_node.h  p2c4_partition.h
garage_back_end/projects/algorithms/src/: data_structures.cpp  is_unique.cpp  main.cpp  p1c2_check_permutations.cpp  p1c3_urlfy.cpp  p1c4_palindrome_permutation.cpp  p2c1_remove_dups.cpp  p2c2_k_to_last.cpp  p2c3_delete_middle_node.cpp  p2c4_partition.cpp
garage_back_end/projects/ppo/: README.md  deploy_inverted_pendulum copy.py  dimensions.py  env.py  main.py  main_deploy.py  main_train.py  networks.py  ppo.py  utils.py
garage_back_end/projects/ppo/envs/: env.py  inverted_pendulum.py  navigation2d.py  point_2d.py
garage_back_end/projects/ppo/saved_models/: 2025_03_02_12_48_saved_actor_step_22_total_steps_100.pth  (+1 more)
garage_back_end/projects/simulator/: CMakeLists.txt
garage_back_end/projects/simulator/src/back-end-server/: CMakeLists.txt  main.cpp
garage_back_end/projects/simulator/src/inverted-pendulum/: CMakeLists.txt
garage_back_end/projects/simulator/src/inverted-pendulum/include/: controller.h  integrator.h  physics_sim.h  simulation.h  systems.h  types.h
garage_back_end/projects/simulator/src/inverted-pendulum/scripts/: visualization.py
garage_back_end/projects/simulator/src/inverted-pendulum/src/: integrator.cpp  linear_algebra.cpp  physics_sim.cpp  simulation.cpp  systems.cpp
garage_back_end/projects/simulator/src/inverted-pendulum/tests/: typesTests.cpp
garage_front_end/: Dockerfile  package-lock.json  package.json  request_back_end.sh  submit_simulation
garage_front_end/src/: App.js
garage_front_end/src/components/: Navbar.jsx
garage_front_end/src/pages/: AboutMe.jsx  Home.jsx  page.css
projects/: Dockerfile
projects/simulator/: CMakeLists.txt
projects/simulator/binder.egg-info/: PKG-INFO  SOURCES.txt
projects/simulator/installation_scripts/: build_simulator.sh  install_eigen.sh  install_packages.sh  run_server.sh
projects/simulator/python_facade/: spawn_simulation.py
projects/simulator/src/binder/: CMakeLists.txt
projects/simulator/src/binder/src/: binder.cpp
projects/simulator/src/inverted-pendulum/: README.md
projects/simulator/src/inverted-pendulum/include/: integrator.h  linear_algebra.h  physics_sim.h
projects/simulator/src/inverted-pendulum/scripts/: simulation.txt
projects/simulator/src/inverted-pendulum/src/: controller.cpp  integrator.cpp
(+16 files in other folders)
